<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Catima</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <plurals name="selectedCardCount">
        <item quantity="one"><xliff:g>%d</xliff:g> selected</item>
        <item quantity="other"><xliff:g>%d</xliff:g> selected</item>
    </plurals>
    <string name="noGiftCards">Click the + plus button to add a card, or import from the ⋮ menu</string>
    <string name="noGiftCardsGroup">Create some cards, and then assign them to the group here</string>
    <string name="noMatchingGiftCards">No results. Try changing your search.</string>
    <string name="storeName">Name</string>
    <string name="note">Note</string>
    <string name="cardId">Card ID</string>
    <string name="barcodeType">Barcode type</string>
    <string name="noBarcode">No barcode</string>
    <string name="star">Add to favorites</string>
    <string name="unstar">Remove from favorites</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="deleteTitle">Delete card</string>
    <plurals name="deleteCardsTitle">
        <item quantity="one">Delete <xliff:g>%d</xliff:g> card</item>
        <item quantity="other">Delete <xliff:g>%d</xliff:g> cards</item>
    </plurals>
    <string name="deleteConfirmation">Delete this card permanently?</string>
    <plurals name="deleteCardsConfirmation">
        <item quantity="one">Delete this <xliff:g>%d</xliff:g> card permanently?</item>
        <item quantity="other">Delete these <xliff:g>%d</xliff:g> cards permanently?</item>
    </plurals>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="sendLabel">Send…</string>
    <string name="editCardTitle">Edit card</string>
    <string name="addCardTitle">Add card</string>
    <string name="scanCardBarcode">Scan barcode</string>
    <string name="cardShortcut">Card shortcut</string>
    <string name="noCardsMessage">Add a card first</string>
    <string name="barcodeImageDescriptionWithType">Image <xliff:g>%s</xliff:g> barcode</string>
    <string name="noCardExistsError">Couldn\'t find that card</string>
    <string name="failedParsingImportUriError">Couldn\'t parse the import URI</string>
    <string name="importExport">Import/export</string>
    <string name="exportName">Export</string>
    <string name="importExportHelp">Backing up your data allows moving it to another device</string>
    <string name="importSuccessfulTitle">Imported</string>
    <string name="importFailedTitle">Import failed</string>
    <string name="importFailed">Could not perform import</string>
    <string name="exportSuccessfulTitle">Exported</string>
    <string name="exportFailedTitle">Export failed</string>
    <string name="exportFailed">Could not perform export</string>
    <string name="importing">Importing…</string>
    <string name="exporting">Exporting…</string>
    <string name="storageReadPermissionRequired">Permission to read storage needed for this action…</string>
    <string name="cameraPermissionRequired">Permission to access camera needed for this action…</string>
    <string name="permissionReadCardsLabel">Read Catima cards</string>
    <string name="permissionReadCardsDescription">read your Catima cards and all its details, including notes and images</string>
    <string name="cameraPermissionDeniedTitle">Couldn\'t access the camera</string>
    <string name="noCameraPermissionDirectToSystemSetting">To scan barcodes, Catima will need access to your camera. Tap here to change your permission settings.</string>
    <string name="exportOptionExplanation">The data will be written to a location of your choice</string>
    <string name="importOptionFilesystemTitle">Import from filesystem</string>
    <string name="importOptionFilesystemExplanation">Choose a specific file from the filesystem</string>
    <string name="importOptionFilesystemButton">From filesystem</string>
    <string name="about">About</string>
    <string name="app_copyright_fmt" tools:ignore="PluralsCandidate">Copyright © 2019–<xliff:g>%d</xliff:g> Sylvia van Os and contributors</string>
    <string name="app_copyright_short">Copyright © Sylvia van Os and contributors</string>
    <string name="app_copyright_old">Based on Loyalty Card Keychain\ncopyright © 2016–2020 Branden Archer</string>
    <string name="app_license">Copylefted libre software, licensed GPLv3+</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="debug_version_fmt">Version: <xliff:g id="version">%s</xliff:g></string>
    <string name="app_libraries">Third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_resources">Third-party resources: <xliff:g id="app_resources_list">%s</xliff:g></string>
    <string name="selectBarcodeTitle">Select barcode</string>
    <string name="thumbnailDescription">Thumbnail</string>
    <string name="starImage">Favorite star</string>
    <string name="settings">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_key_theme" translatable="false">pref_theme</string>
    <string name="settings_system_theme">System</string>
    <string name="settings_key_system_theme" translatable="false">system</string>
    <string name="settings_light_theme">Light</string>
    <string name="settings_key_light_theme" translatable="false">light</string>
    <string name="settings_dark_theme">Dark</string>
    <string name="settings_key_dark_theme" translatable="false">dark</string>
    <string name="settings_key_max_font_size_scale" translatable="false">pref_max_font_size_scale</string>
    <string name="settings_display_barcode_max_brightness">Brighten screen</string>
    <string name="settings_display_barcode_max_brightness_summary">Necessary for some scanners to work</string>
    <string name="settings_key_display_barcode_max_brightness" translatable="false">pref_display_card_max_brightness</string>
    <string name="settings_keep_screen_on">Keep screen on</string>
    <string name="settings_keep_screen_on_summary">Disables screen timeout while viewing a card</string>
    <string name="settings_key_keep_screen_on" translatable="false">pref_keep_screen_on</string>
    <string name="settings_disable_lockscreen_while_viewing_card">Prevent screen lock</string>
    <string name="settings_disable_lockscreen_while_viewing_card_summary">Disables screen lock while viewing a card</string>
    <string name="settings_disable_nfc_while_viewing_card">Pause NFC</string>
    <string name="settings_disable_nfc_while_viewing_card_summary">Pauses NFC to prevent NFC payments from triggering while viewing a card</string>
    <string name="settings_key_disable_nfc_while_viewing_card" translatable="false">pref_disable_nfc_while_viewing_card</string>
    <string name="settings_allow_content_provider_read_title">Sync with Gadgetbridge</string>
    <string name="settings_allow_content_provider_read_summary">Allows the Gadgetbridge app to sync your cards to supported watches</string>
    <string name="settings_key_disable_lockscreen_while_viewing_card" translatable="false">pref_disable_lockscreen_while_viewing_card</string>
    <string name="settings_key_allow_content_provider_read" translatable="false">pref_allow_content_provider_read</string>
    <string name="settings_key_oled_dark" translatable="false">pref_oled_dark</string>
    <string name="settings_use_volume_keys_navigation">Switch cards using volume buttons</string>
    <string name="settings_use_volume_keys_navigation_summary">Use the volume buttons to change which card is displayed</string>
    <string name="settings_key_use_volume_keys_navigation" translatable="false">pref_use_volume_keys_navigation</string>
    <string name="sharedpreference_active_tab" translatable="false">sharedpreference_active_tab</string>
    <string name="sharedpreference_sort" translatable="false">sharedpreference_sort</string>
    <string name="sharedpreference_sort_order" translatable="false">sharedpreference_sort_order</string>
    <string name="sharedpreference_sort_direction" translatable="false">sharedpreference_sort_direction</string>
    <string name="sharedpreference_card_details" translatable="false">sharedpreference_card_details</string>
    <string name="intent_import_card_from_url_share_text">I want to share a card with you</string>
    <string name="intent_import_card_from_url_host_catima_app" translatable="false">catima.app</string>
    <string name="intent_import_card_from_url_path_prefix_catima_app" translatable="false">/share</string>
    <string name="intent_import_card_from_url_host_thelastproject" translatable="false">thelastproject.github.io</string>
    <string name="intent_import_card_from_url_path_prefix_thelastproject" translatable="false">/Catima/share</string>
    <string name="intent_import_card_from_url_host_brarcher" translatable="false">brarcher.github.io</string>
    <string name="intent_import_card_from_url_path_prefix_brarcher" translatable="false">/loyalty-card-locker/share</string>
    <string name="importSuccessful">Data imported</string>
    <string name="exportSuccessful">Data exported</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="groups">Groups</string>
    <string name="group_edit">Edit Group</string>
    <string name="noGroups">Click the + plus button to add groups for categorization</string>
    <string name="noGroupCards">This group is empty</string>
    <plurals name="groupCardCount">
        <item quantity="one"><xliff:g>%d</xliff:g> card</item>
        <item quantity="other"><xliff:g>%d</xliff:g> cards</item>
    </plurals>
    <string name="group_name_already_in_use">Group name already in use</string>
    <string name="group_name_is_empty">Group name must not be empty</string>
    <string name="group_updated">Group updated</string>
    <string name="all">All</string>
    <string name="deleteConfirmationGroup">Delete group?</string>
    <string name="failedOpeningFileManager">Failed to open file manager</string>
    <string name="moveUp">Move upwards</string>
    <string name="moveDown">Move downwards</string>
    <string name="leaveWithoutSaveTitle">Exit</string>
    <string name="leaveWithoutSaveConfirmation">Leave without saving?</string>
    <string name="addManually">Enter the barcode manually</string>
    <string name="addFromImage">Select an image from gallery</string>
    <string name="groupsList">Groups: <xliff:g>%s</xliff:g></string>
    <string name="editGroup">Editing group: <xliff:g>%s</xliff:g></string>
    <string name="expiryStateSentence">Expires: <xliff:g>%s</xliff:g></string>
    <string name="expiryStateSentenceExpired">Expired: <xliff:g>%s</xliff:g></string>
    <string name="balanceSentence">Balance: <xliff:g>%s</xliff:g></string>
    <plurals name="balancePoints">
        <item quantity="one"><xliff:g>%s</xliff:g> point</item>
        <item quantity="other"><xliff:g>%s</xliff:g> points</item>
    </plurals>
    <string name="card">Card</string>
    <string name="editBarcode">Edit barcode</string>
    <string name="expiryDate">Expiry date</string>
    <string name="never">Never</string>
    <string name="chooseExpiryDate">Choose expiry date</string>
    <string name="sort">Sort</string>
    <string name="showMoreInfo">Show info</string>
    <string name="duplicateCard">Duplicate</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="previousCard">Previous</string>
    <string name="nextCard">Next</string>
    <string name="welcome">Welcome to Catima</string>
    <string name="action_display_options">Display options</string>
</resources>