<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="protect.card_locker.MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        android:visible="false"/>
    <item
        android:id="@+id/action_display_options"
        android:title="@string/action_display_options"
        android:icon="@drawable/baseline_visibility_24"
        app:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_baseline_sort_24"
        app:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/action_manage_groups"
        android:icon="@drawable/ic_folder_white"
        android:title="@string/groups"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_import_export"
        android:icon="@drawable/ic_import_export_white_24dp"
        android:title="@string/importExport"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>
