<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_duplicate"
        android:title="@string/duplicateCard"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_lock_unlock"
        android:icon="@drawable/ic_lock_open_white_24dp"
        android:title="@string/lockScreen"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white"
        android:title="@string/share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_star_unstar"
        android:icon="@drawable/ic_unstarred_white"
        android:title="@string/star"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_baseline_archive_24"
        android:title="@string/archive"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_unarchive"
        android:icon="@drawable/ic_baseline_archive_24"
        android:title="@string/unarchive"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"
        app:showAsAction="never"/>
</menu>