<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_show_info"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/showMoreInfo"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_previous"
        android:icon="@drawable/ic_baseline_chevron_left_24"
        android:title="@string/previousCard"
        android:enabled="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_baseline_chevron_right_24"
        android:title="@string/nextCard"
        android:enabled="false"
        app:showAsAction="always" />
</menu>