<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="protect.card_locker.ManageGroupActivity"
    tools:showIn="@layout/activity_manage_group">

    <TextView
        style="@style/AppTheme.TextView.NoData"
        android:id="@+id/helpText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/noGiftCards"
        android:visibility="gone"/>

    <TextView
        style="@style/AppTheme.TextView.NoData"
        android:id="@+id/noMatchingCardsText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/noMatchingGiftCards"
        android:visibility="gone"/>

    <TextView
        style="@style/AppTheme.TextView.NoData"
        android:id="@+id/noGroupCardsText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/noGroupCards"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:spanCount="@integer/main_view_card_columns"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:background="@color/mainLoyaltyCardBackground"
        android:visibility="gone"/>

</RelativeLayout>
