<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:baselineAligned="false"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="@dimen/storeNameTextSize"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/cardCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="@dimen/noteTextSize"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/moveUp"
            android:layout_width="@dimen/cardThumbnailSize"
            android:layout_height="@dimen/cardThumbnailSize"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_arrow_drop_up_24"
            android:contentDescription="@string/moveUp"
            app:tint="#000000"
            android:onClick="moveGroupUp"/>

        <ImageButton
            android:id="@+id/moveDown"
            android:layout_width="@dimen/cardThumbnailSize"
            android:layout_height="@dimen/cardThumbnailSize"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
            android:contentDescription="@string/moveDown"
            app:tint="#000000"
            android:onClick="moveGroupDown"/>

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="@dimen/cardThumbnailSize"
            android:layout_height="@dimen/cardThumbnailSize"
            android:layout_weight="1"
            android:src="@drawable/ic_mode_edit_white_24dp"
            android:contentDescription="@string/edit"
            app:tint="#000000"
            android:onClick="editGroup" />

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="@dimen/cardThumbnailSize"
            android:layout_height="@dimen/cardThumbnailSize"
            android:layout_weight="1"
            android:src="@drawable/ic_delete_white_24dp"
            android:contentDescription="@string/delete"
            app:tint="#000000"
            android:onClick="deleteGroup"/>

    </LinearLayout>

</LinearLayout>
