<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="protect.card_locker.MainActivity"
    tools:showIn="@layout/main_activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/welcome_icon"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:contentDescription="@string/welcome"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_text"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_icon" />

        <TextView
            android:id="@+id/add_card_instruction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/no_data_padding"
            android:gravity="center"
            android:text="@string/noGiftCards"
            android:textAppearance="@style/AppTheme.TextView.NoData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_helper_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="welcome_icon, welcome_text,add_card_instruction"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/noMatchingCardsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noMatchingGiftCards"
            android:textAppearance="@style/AppTheme.TextView.NoData"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/noGroupCardsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/noGroupCards"
            android:textAppearance="@style/AppTheme.TextView.NoData"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:spanCount="@integer/main_view_card_columns"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/mOpenArchiveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/no_data_padding"
            android:textAppearance="@style/AppTheme.TextView.NoData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list"
            tools:text="@tools:sample/cities" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
